adding the add , show all stories ,show a story and delete story

--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -9,11 +9,20 @@
     <h1>Create a new account!</h1>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
-      <input type="text" name="username" id="username" />
+      <input type="text" name="username" id="username" required />
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="email" required />
       <label for="password">Password:</label>
-      <input type="password" name="password" id="password" />
+      <input type="password" name="password" id="password" required />
       <label for="confirmPassword">Confirm Password:</label>
-      <input type="password" name="confirmPassword" id="confirmPassword" />
+      <input
+        type="password"
+        name="confirmPassword"
+        id="confirmPassword"
+        required
+      />
+      <label for="age">Age:</label>
+      <input type="number" name="age" id="age" />
       <button type="submit">Sign up</button>
     </form>
   </body>
