--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
-</head>
-<body>
+<%- include('partials/head') %>
+
 <% if (user) { %>
-<h1>Welcome to the app, <%= user.username %>!</h1>
-<a href="/auth/sign-out">Sign out</a>
+  <h1>Welcome to the app, <%= user.username %>!</h1>
+  <a class="nav-link" href="/auth/sign-out">Sign out</a>
+  <a class="nav-link" href="/story/new">Add a Story</a>
 <% } else { %>
-<h1>Welcome to the app, guest.</h1>
-<p>
-  <a href="/auth/sign-up">Sign up</a> or <a href="/auth/sign-in">sign in</a>.
-</p>
+  <h1>Welcome to the app, guest.</h1>
+  <p>
+    <a href="/auth/sign-up">Sign up</a> or
+    <a href="/auth/sign-in">sign in</a>.
+  </p>
 <% } %>
+
 </body>
 </html>
