--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -3,16 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    ></script>
     <title>Sign In</title>
   </head>
   <body>
-    <h1>Sign in</h1>
+    <!-- <h1>Sign in</h1>
     <form action="/auth/sign-in" method="POST">
       <label for="username">Username:</label>
       <input type="text" name="username" id="username" required />
       <label for="password">Password:</label>
       <input type="password" name="password" id="password" required/>
       <button type="submit">Sign in</button>
+    </form> -->
+    <div class="modal-content rounded-4 shadow">
+  <div class="modal-header p-5 pb-4 border-bottom-0">
+    <h1 class="fw-bold mb-0 fs-2">Sign in</h1>
+  </div>
+  <div class="modal-body p-5 pt-0">
+    <form action="/auth/sign-in" method="POST">
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control rounded-3"
+          id="username"
+          name="username"
+          placeholder="Username"
+          required
+        />
+        <label for="username">Username</label>
+      </div>
+
+      <div class="form-floating mb-4">
+        <input
+          type="password"
+          class="form-control rounded-3"
+          id="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
+        <label for="password">Password</label>
+      </div>
+
+      <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">
+        Sign in
+      </button>
     </form>
+  </div>
+</div>
+
   </body>
 </html>
