--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -3,10 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    ></script>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Sign Up</title>
   </head>
   <body>
-    <h1>Create a new account!</h1>
+    <!-- <h1>Create a new account!</h1>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
       <input type="text" name="username" id="username" required />
@@ -24,6 +33,82 @@
       <label for="age">Age:</label>
       <input type="number" name="age" id="age" />
       <button type="submit">Sign up</button>
-    </form>
+    </form> -->
+
+    <div class="modal-content rounded-4 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h1 class="fw-bold mb-0 fs-2">Create a new account!</h1>
+      </div>
+      <div class="modal-body p-5 pt-0">
+        <form action="/auth/sign-up" method="POST">
+          <div class="form-floating mb-3">
+            <input
+              type="text"
+              class="form-control rounded-3"
+              id="username"
+              name="username"
+              placeholder="Username"
+              required
+            />
+            <label for="username">Username</label>
+          </div>
+
+          <div class="form-floating mb-3">
+            <input
+              type="email"
+              class="form-control rounded-3"
+              id="email"
+              name="email"
+              placeholder="name@example.com"
+              required
+            />
+            <label for="email">Email address</label>
+          </div>
+
+          <div class="form-floating mb-3">
+            <input
+              type="password"
+              class="form-control rounded-3"
+              id="password"
+              name="password"
+              placeholder="Password"
+              required
+            />
+            <label for="password">Password</label>
+          </div>
+
+          <div class="form-floating mb-3">
+            <input
+              type="password"
+              class="form-control rounded-3"
+              id="confirmPassword"
+              name="confirmPassword"
+              placeholder="Confirm Password"
+              required
+            />
+            <label for="confirmPassword">Confirm Password</label>
+          </div>
+
+          <div class="form-floating mb-4">
+            <input
+              type="number"
+              class="form-control rounded-3"
+              id="age"
+              name="age"
+              placeholder="Age"
+            />
+            <label for="age">Age</label>
+          </div>
+
+          <button
+            class="w-100 mb-2 btn btn-lg rounded-3 btn-primary"
+            type="submit"
+          >
+            Sign up
+          </button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
+<!--  -->
