--- a/views/story/edit.ejs
+++ b/views/story/edit.ejs
@@ -1,31 +1,65 @@
 <%- include('../partials/head') %>
 
-<div class="container mt-4" style="max-width: 600px;">
-  <h1 class="text-center mb-4">Edit <%= foundStory.title %></h1>
-
-  <form action="/story/<%= foundStory._id %>?_method=PUT" method="POST">
-    <div class="mb-3">
-        <label for="title">Story Title:</label>
-        <input type="text" id="title" name="title" value="<%=foundStory.title%>" required />    
-      </div>
-
-      <div class="mb-3">
-        <label for="date">Date: </label>
-        <input type="date" id="date" name="date" value="<%=foundStory.date%>" />
-      </div>
-
-      <div class="mb-3">
-        <label for="genre">Genre:</label>
-        <input type="text" id="genre" name="genre" value="<%=foundStory.genre%>" />
-      </div>
-
-      <div class="mb-3">
-        <label for="story">The story:</label>
-        <textarea name="story" id="story" value="<%=foundStory.story%>"></textarea>
-      </div>
+<div class="modal-content rounded-4 shadow container mt-5" style="max-width: 900px;">
+  <div class="modal-header p-5 pb-4 border-bottom-0">
+    <h1 class="fw-bold mb-0 fs-2">Edit <%= foundStory.title %></h1>
+  </div>
+  <div class="modal-body p-5 pt-0">
+    <form action="/story/<%= foundStory._id %>?_method=PUT" method="POST">
       
-      <button type="submit">Update story</button>
-  </form>
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control rounded-3"
+          id="title"
+          name="title"
+          value="<%= foundStory.title %>"
+          placeholder="Story Title"
+          required
+        />
+        <label for="title">Story Title</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input
+          type="date"
+          class="form-control rounded-3"
+          id="date"
+          name="date"
+          value="<%= foundStory.date%>"
+          placeholder="Date"
+        />
+        <label for="date">Date</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control rounded-3"
+          id="genre"
+          name="genre"
+          value="<%= foundStory.genre %>"
+          placeholder="Genre"
+        />
+        <label for="genre">Genre</label>
+      </div>
+
+      <div class="form-floating mb-4">
+        <textarea
+          class="form-control rounded-3"
+          placeholder="Edit your story"
+          id="story"
+          name="story"
+          style="height: 150px"
+        ><%= foundStory.story %></textarea>
+        <!-- <label for="story">The story</label> -->
+      </div>
+
+      <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">
+        Update story
+      </button>
+    </form>
+  </div>
 </div>
 
 </body>
