--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,16 @@
 
 <% if (user) { %>
   <h1>Welcome to the app, <%= user.username %>!</h1>
-  <a class="nav-link" href="/auth/sign-out">Sign out</a>
-  <a class="nav-link" href="/story/new">Add a Story</a>
+ <a class="custom-link" href="/auth/sign-out">Sign out</a></br>
+<a class="custom-link" href="/story/new">Add a Story</a>
+
 <% } else { %>
   <h1>Welcome to the app, guest.</h1>
-  <p>
-    <a href="/auth/sign-up">Sign up</a> or
-    <a href="/auth/sign-in">sign in</a>.
-  </p>
+ <p>
+  <a class="custom-link" href="/auth/sign-up">Sign up</a> or
+  <a class="custom-link" href="/auth/sign-in">sign in</a>.
+</p>
+
 <% } %>
 
 </body>
