--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Sign Up</title>
   </head>
-  <body>
+  <body> -->
+    <%- include('../partials/head') %>
     <!-- <h1>Create a new account!</h1>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
@@ -106,6 +107,7 @@
           >
             Sign up
           </button>
+           <p>Already have an account <a href="/auth/sign-in"> sign in</a></p>
         </form>
       </div>
     </div>
