--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,53 +11,51 @@
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     ></script>
-    <title>Sign In</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <title>Sign Up</title>
   </head>
-  <body>
-    <!-- <h1>Sign in</h1>
-    <form action="/auth/sign-in" method="POST">
-      <label for="username">Username:</label>
-      <input type="text" name="username" id="username" required />
-      <label for="password">Password:</label>
-      <input type="password" name="password" id="password" required/>
-      <button type="submit">Sign in</button>
-    </form> -->
+  <body> -->
+<%- include('../partials/head') %>
+    <!--  -->
     <div class="modal-content rounded-4 shadow">
-  <div class="modal-header p-5 pb-4 border-bottom-0">
-    <h1 class="fw-bold mb-0 fs-2">Sign in</h1>
-  </div>
-  <div class="modal-body p-5 pt-0">
-    <form action="/auth/sign-in" method="POST">
-      <div class="form-floating mb-3">
-        <input
-          type="text"
-          class="form-control rounded-3"
-          id="username"
-          name="username"
-          placeholder="Username"
-          required
-        />
-        <label for="username">Username</label>
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h1 class="fw-bold mb-0 fs-2">Sign in</h1>
       </div>
+      <div class="modal-body p-5 pt-0">
+        <form action="/auth/sign-in" method="POST">
+          <div class="form-floating mb-3">
+            <input
+              type="text"
+              class="form-control rounded-3"
+              id="username"
+              name="username"
+              placeholder="Username"
+              required
+            />
+            <label for="username">Username</label>
+          </div>
 
-      <div class="form-floating mb-4">
-        <input
-          type="password"
-          class="form-control rounded-3"
-          id="password"
-          name="password"
-          placeholder="Password"
-          required
-        />
-        <label for="password">Password</label>
+          <div class="form-floating mb-3">
+            <input
+              type="password"
+              class="form-control rounded-3"
+              id="password"
+              name="password"
+              placeholder="Password"
+              required
+            />
+            <label for="password">Password</label>
+          </div>
+
+          <button
+            class="w-100 mb-2 btn btn-lg rounded-3 btn-primary"
+            type="submit"
+          >
+            Sign in
+          </button>
+          <p>Dont have an account <a href="/auth/sign-up"> sign up</a></p>
+        </form>
       </div>
-
-      <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">
-        Sign in
-      </button>
-    </form>
-  </div>
-</div>
-
+    </div>
   </body>
 </html>
