--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -34,29 +33,32 @@
               <a class="nav-link" href="/story">All Stories</a>
             </li>
             <% if (user) { %>
-              <li class="nav-item">
-                <a class="nav-link" href="/story/new">Add a Story</a>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/story/new">Add a Story</a>
+            </li>
             <% } %>
           </ul>
 
           <ul class="navbar-nav ms-auto">
             <% if (user) { %>
-              <li class="nav-item">
-                <span class="nav-link disabled">Welcome, <%= user.username %>!</span>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/auth/sign-out">Sign Out</a>
-              </li>
+            <li class="nav-item">
+             
+                 <a href="/story/profile/<%= user._id%>" class="nav-link" > Welcome,<%= user.username %>!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/sign-out">Sign Out</a>
+            </li>
             <% } else { %>
-              <li class="nav-item">
-                <a class="nav-link" href="/auth/sign-in">Sign In</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/auth/sign-up">Sign Up</a>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/sign-in">Sign In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/sign-up">Sign Up</a>
+            </li>
             <% } %>
           </ul>
         </div>
       </div>
     </nav>
+  </body>
+</html>
