--- a/views/story/show.ejs
+++ b/views/story/show.ejs
@@ -5,21 +5,35 @@
 
 
   <p class="lead"><%= foundStory.genre %></p>
-  <p><strong>Published by:</strong> <%= foundStory.author.username %></p>
+  <p><strong>Published by:</strong>
+     <a  href="/story/profile/<%=foundStory.author._id%>"><%= foundStory.author.username %></a>
+    </p>
   <p>Published on: <%= foundStory.date %></p>
   
   <p> <%=foundStory.story%></p>
 
   <a href="/story" class="btn btn-secondary mt-3">Back to Stories</a>
-</div>
+  <i class="bi bi-save">
+    
+  </i>
+  <!-- <a href="/story/<%= foundStory._id %>" class="btn btn-secondary mt-3">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
+  <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1z"/>
+</svg>
+  </a>
+  
 
+  <a href="/story/<%= foundStory._id %>" class="btn btn-secondary mt-3">&#10084;</a>
+  -->
+</div>
+<%if(user){%>
 <% if (foundStory.author._id.equals(user._id)) { %>
   <form action="/story/<%= foundStory._id %>?_method=DELETE" method="POST">
     <a href="/story/<%= foundStory._id %>/edit" class="btn btn-warning">Edit</a>
     <button type="submit" class="btn btn-danger">Delete</button>
   </form>
-<% } %>
-
+<% } }%>
+<!-- comment -->
 <h3 class="text-center">Leave a Comment</h3>
 <div class="container mt-4" style="max-width: 1000px;">
 <form action="/story/<%= foundStory._id %>/comments" method="POST" class="mb-4">
@@ -37,7 +51,7 @@
     <li class="list-group-item">
       <p><%= comment.commenter.username %></p>
       <p><%= comment.content %> </p>
-
+      <%if(user){%>
       <% if (comment.commenter._id.equals(user._id)) { %>
         <div class="comment-actions">
           <button class="btn btn-warning btn-sm" type="button" onclick="toggleUpdateForm(<%= index %>)">Update</button>
@@ -56,7 +70,7 @@
           <button class="btn btn-warning btn-sm" type="submit">Save</button>
           <button type="button" class="btn btn-secondary btn-sm" onclick="toggleUpdateForm(<%= index %>)">Cancel</button>
         </form>
-      <% } %>
+      <% } }%>
     </li>
   <% }) %>
 </ul>
