--- a/views/story/index.ejs
+++ b/views/story/index.ejs
@@ -10,7 +10,7 @@
           <div class="card-body">
             <h5 class="card-title"><%= story.title %></h5>
             <p class="card-text"><%= story.genre %></p>
-            <p class="card-text"><strong><%= story.date%> </strong></p>
+            <p class="card-text"><strong><%= story.createdAt.toDateString()%> </strong></p>
             <p class="card-text"><%= story.author.username %></p>
             <!-- Button to view listing will be broken until next section -->
 
