--- a/views/story/new.ejs
+++ b/views/story/new.ejs
@@ -19,7 +19,7 @@
         <label for="title">Story Title</label>
       </div>
 
-      <div class="form-floating mb-3">
+      <!-- <div class="form-floating mb-3">
         <input
           type="date"
           class="form-control rounded-3"
@@ -28,7 +28,7 @@
           placeholder="Date"
         />
         <label for="date">Date</label>
-      </div>
+      </div> -->
 
       <div class="form-floating mb-3">
         <!-- <input
